testdata/baselines/reference/submodule/compiler/exportEqualErrorType.errors.txt
exportEqualErrorType_1.ts(2,26): error TS2307: Cannot find module 'exportEqualErrorType_0' or its corresponding type declarations.


==== exportEqualErrorType_1.ts (1 errors) ====
    ///<reference path='exportEqualErrorType_0.ts'/>
    import connect = require('exportEqualErrorType_0');
                             ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'exportEqualErrorType_0' or its corresponding type declarations.
    connect().use(connect.static('foo')); // Error  1      The property 'static' does not exist on value of type ''.
    
==== exportEqualErrorType_0.ts (0 errors) ====
    module server {
        export interface connectModule {
            (res, req, next): void;
        }
        export interface connectExport {
            use: (mod: connectModule) => connectExport;
        }
    }
    var server: {
        (): server.connectExport;
        foo: Date;
    };
    export = server;
     